[gd_scene load_steps=7 format=2]

[ext_resource path="res://Units/Unit.gd" type="Script" id=1]

[sub_resource type="CylinderShape" id=1]

[sub_resource type="CylinderMesh" id=2]
top_radius = 0.5
bottom_radius = 0.5
height = 1.0
radial_segments = 20
rings = 1

[sub_resource type="CylinderMesh" id=4]
top_radius = 0.1
bottom_radius = 0.1
height = 0.5

[sub_resource type="SphereShape" id=3]
radius = 11.0

[sub_resource type="Animation" id=5]
resource_name = "Walk"

[node name="Unit" type="KinematicBody" groups=["UNIT"]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06075, 0 )
shape = SubResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.55, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="RightArm" type="MeshInstance" parent="Body"]
mesh = SubResource( 4 )
material/0 = null

[node name="LeftArm" type="MeshInstance" parent="Body"]
mesh = SubResource( 4 )
material/0 = null

[node name="RightLeg" type="MeshInstance" parent="Body"]
mesh = SubResource( 4 )
material/0 = null

[node name="LeftLeg" type="MeshInstance" parent="Body"]
mesh = SubResource( 4 )
material/0 = null

[node name="Range" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Range"]
shape = SubResource( 3 )

[node name="DirectionChangeTimer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Walk = SubResource( 5 )

[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_Range_body_exited"]
[connection signal="timeout" from="DirectionChangeTimer" to="." method="_on_DirectionChangeTimer_timeout"]
